src/parser/snapshots/shik__parser__tests__complex_nested_structure.snap
---
source: src/parser/tests.rs
expression: "ast(\"let$ process (fn [data] '(\\n  let$ cleaned trim data\\n  save cleaned\\n))\")"
---
[
    Statement {
        expression: Expression {
            kind: Let {
                pattern: Identifier(
                    "process",
                ),
                value: Expression {
                    kind: Parenthesized(
                        Expression {
                            kind: Lambda {
                                parameters: [
                                    Identifier(
                                        "data",
                                    ),
                                ],
                                rest: None,
                                body: Expression {
                                    kind: Block(
                                        [
                                            Expression {
                                                kind: Let {
                                                    pattern: Identifier(
                                                        "cleaned",
                                                    ),
                                                    value: Expression {
                                                        kind: Application {
                                                            function: Expression {
                                                                kind: Identifier(
                                                                    "trim",
                                                                ),
                                                                span: Span {
                                                                    line: 2,
                                                                    column: 16,
                                                                },
                                                            },
                                                            argument: Expression {
                                                                kind: Identifier(
                                                                    "data",
                                                                ),
                                                                span: Span {
                                                                    line: 2,
                                                                    column: 21,
                                                                },
                                                            },
                                                        },
                                                        span: Span {
                                                            line: 2,
                                                            column: 16,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    line: 2,
                                                    column: 3,
                                                },
                                            },
                                            Expression {
                                                kind: Application {
                                                    function: Expression {
                                                        kind: Identifier(
                                                            "save",
                                                        ),
                                                        span: Span {
                                                            line: 3,
                                                            column: 3,
                                                        },
                                                    },
                                                    argument: Expression {
                                                        kind: Identifier(
                                                            "cleaned",
                                                        ),
                                                        span: Span {
                                                            line: 3,
                                                            column: 8,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    line: 3,
                                                    column: 3,
                                                },
                                            },
                                        ],
                                    ),
                                    span: Span {
                                        line: 1,
                                        column: 25,
                                    },
                                },
                            },
                            span: Span {
                                line: 1,
                                column: 15,
                            },
                        },
                    ),
                    span: Span {
                        line: 1,
                        column: 14,
                    },
                },
            },
            span: Span {
                line: 1,
                column: 1,
            },
        },
        line: 1,
        column: 1,
    },
]
