src/parser/snapshots/shik__parser__tests__multiple_statements_with_newlines.snap
---
source: src/parser/tests.rs
expression: "ast(\"let$ x 10\\nlet$ y 20\\nx\")"
---
[
    Statement {
        expression: Expression {
            kind: Let {
                pattern: Identifier(
                    "x",
                ),
                value: Expression {
                    kind: Number(
                        10.0,
                    ),
                    span: Span {
                        line: 1,
                        column: 8,
                    },
                },
            },
            span: Span {
                line: 1,
                column: 1,
            },
        },
        line: 1,
        column: 1,
    },
    Statement {
        expression: Expression {
            kind: Let {
                pattern: Identifier(
                    "y",
                ),
                value: Expression {
                    kind: Number(
                        20.0,
                    ),
                    span: Span {
                        line: 2,
                        column: 8,
                    },
                },
            },
            span: Span {
                line: 2,
                column: 1,
            },
        },
        line: 2,
        column: 1,
    },
    Statement {
        expression: Expression {
            kind: Identifier(
                "x",
            ),
            span: Span {
                line: 3,
                column: 1,
            },
        },
        line: 3,
        column: 1,
    },
]
